...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_thumbnail"
        android:layout_width="match_parent"
...
        app:layout_constraintBottom_toTopOf="@+id/detail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favouriteIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_favorite_border_white"
        app:layout_constraintEnd_toEndOf="@+id/detail_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/detail_thumbnail" />

...
